[package]
name = "landing"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "4307ff7" }

[[bin]]
name = "client_landing"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_landing"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]
